# BeChad

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DECISIONS.md  Makefile  PLAN.md  PRIVACY.md  PROGRESS.md  README.md  SECURITY.md  SPEC.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/bechad/app/: MainActivity.kt
android/app/src/main/java/com/bechad/app/camera/: PoseAnalyzer.kt
android/app/src/main/java/com/bechad/app/domain/: Rules.kt
android/app/src/test/java/com/bechad/app/: RulesTest.kt
android/gradle/: libs.versions.toml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: database.py  main.py  models.py  services.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/tests/: test_api.py
infra/: Caddyfile
scripts/: backup.sh  check.sh  codex-setup.sh  deploy.sh  dev.sh
