[project]
name = "bechad-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "sqlalchemy>=2", "alembic>=1.13", "pydantic-settings>=2", "psycopg[binary]>=3", "argon2-cffi>=23", "pyjwt>=2", "python-multipart>=0.0.9", "openai>=1.40"]
[project.optional-dependencies]
test=["pytest>=8", "httpx>=0.27", "ruff>=0.5"]
[tool.ruff]
line-length=100
[tool.pytest.ini_options]
pythonpath=["."]
